Wed Dec 16 14:06:17 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/connectparams.c src/odbc/error.c:
	* src/odbc/odbc.c:
	- Simplified yesterday path for Windows compile

Wed Dec 16 13:54:52 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c: Fix conversion for uni(var)char

Wed Dec 16 09:22:41 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: Fix uninitilized memory access problem

Tue Dec 15 12:45:47 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/connectparams.c win32/winsetup.c:
	- Fix compile under Windows

Tue Dec 15 12:23:27 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/common.h src/odbc/unittests/stats.c:
	- Fix data_type returned from statistics function

Tue Dec 15 10:52:43 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/connectparams.c src/odbc/odbc.c:
	- Avoid wrong configuration problem reporting problems

Tue Dec 15 10:13:12 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/connectparams.c:
	- Update Unixodbc configuration settings for TDS version

Sun Dec 13 20:01:01 EST 2009	JK Lowden <jklowden@freetds.org>
	* doc/freetds.conf.5 doc/userguide.sgml
	- updated documentation in preparation for upcoming release. 

Sun Dec 13 11:37:31 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/rpc_ct_setparam.c src/tds/query.c:
	- Fix posting longbinary on Sybase server

Sun Dec 13 11:36:48 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/t0006.c: Style and comments

Sun Dec 13 10:48:42 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c:
	- Fix problem with long binary managed as char type (patch from
	  Christian Hoffmann)

Mon Dec  7 17:22:05 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c src/tds/convert.c: