@@ -1,3 +1,7 @@
+Thu Dec 17 11:33:39 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tdsodbc.h src/odbc/odbc.c:
+	- Fix statistics functions for Sybase
+
 Wed Dec 16 14:06:17 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tdsodbc.h src/odbc/connectparams.c src/odbc/error.c:
 	* src/odbc/odbc.c:
@@ -2006,4 +2010,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2911 2009/12/16 13:06:30 freddy77 Exp $
+$Id: ChangeLog,v 1.2912 2009/12/17 10:33:59 freddy77 Exp $
